# witness_solver

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: test.yml
docs/: algorithm.md  course-report.md  experiments.md  puzzle-format.md
docs/experiments/: results.md
docs/experiments/data/: basic_4x4.csv  basic_4x4.json  dots_3x3.csv  dots_3x3.json  hard_6x6.csv  hard_6x6.json
docs/screenshots/: README.md
puzzles/: basic_4x4.json  colored_dots_2x2.json  dots_3x3.json  elimination_2x2.json  elimination_mixed_3x3.json  everything_4x4.json  hard_5x5.json  hard_6x6.json  minimal_1x1.json  mixed_4x4.json  puzzle.txt  squares_3x3.json  stress_7x7.json  stress_mixed_6x6.json  sun_3x3.json  sun_unsolvable_3x3.json  symmetry_unsolvable.json  symmetry_x_4x4.json  symmetry_xy_4x4.json  symmetry_y_4x4.json  tetris_2x2.json  tetris_3x3.json  tetris_negative_3x3.json  tetris_rotate_2x2.json  tetris_unsolvable_3x3.json  triangles_2x2.json  triangles_4x4.json
src/: debug_draw.rs  dfs.rs  gui.rs  lib.rs  main.rs  problem.rs  pruner.rs  satisfier.rs  state.rs  undo.rs
src/problem/: debug_draw.rs  graph.rs  witness_pruner.rs  witness_satisfier.rs  witness_state.rs
src/solver/: dfs.rs  mod.rs  pruner.rs  satisfier.rs  state.rs  undo.rs
src/witness/: AGENTS.md  constraints.rs  debug_draw.rs  graph.rs  indexing.rs  mod.rs  pruners.rs  region.rs  rules.rs  schema.rs  state.rs  types.rs
tests/: api.rs  proptest.rs  puzzles.rs  validation.rs
