[package]
name = "witness_solver"
version = "0.2.0"
edition = "2024"

[dependencies]
rayon = "1.8"
smallvec = "1.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
