[package]
name = "witness_solver"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
rayon = "1.8"
smallvec = "1.13"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
eframe = { version = "0.30", default-features = false, features = ["default", "glow"] }
rfd = "0.15"

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
